--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -82,6 +82,15 @@
         android:src="@drawable/title_map_icon"
         android:visibility="gone" />
 
+    <ImageView
+        android:id="@+id/title_zhuBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/title_zhu_icon"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/title_saveBtn"
         android:layout_width="wrap_content"
